--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,8 @@ android {
     }
 }
 
-def coroutineVersion = '1.3.0'
+def coroutine_version = '1.3.0'
+def lifecycle_version = '2.2.0-alpha04'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -35,9 +36,10 @@ dependencies {
     implementation 'androidx.browser:browser:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     // coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutineVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutineVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
     // networking
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     // image loader
